# iamawrapper

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bom_entries.rs  fuzz_bom_paths.rs  fuzz_bom_structure.rs
samples/: README.md
samples/intune-app/: config.json  install.ps1  uninstall.ps1
samples/macos-app/ContosoTool.app/Contents/: Info.plist
samples/macos-app/ContosoTool.app/Contents/MacOS/: contoso-tool
samples/macos-app/scripts/: postinstall  preinstall
specs/001-intunewin-packager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-intunewin-packager/checklists/: requirements.md
specs/001-intunewin-packager/contracts/: cli-contract.md  file-format-contract.md
specs/002-macos-pkg/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-macos-pkg/checklists/: requirements.md
specs/002-macos-pkg/contracts/: cli-interface.md
src/: lib.rs  main.rs
src/cli/: args.rs  interactive.rs  mod.rs
src/macos/: bom.rs  cpio.rs  mod.rs  payload.rs  xar.rs  xml.rs
src/models/: detection.rs  error.rs  macos.rs  mod.rs  package.rs
src/packager/: archive.rs  encrypt.rs  metadata.rs  mod.rs
tests/: cli_test.rs  macos_test.rs
