[package]
name = "iamawrapper"
version = "0.2.2"
edition = "2024"
authors = ["INSPIRATIONLABS GmbH"]
description = "Cross-platform replacement for Microsoft Win32 Content Prep Tool and macOS package builder"
license-file = "LICENSE"
repository = "https://github.com/INSPIRATIONLABS/iamawrapper"
keywords = ["intune", "microsoft", "packaging", "intunewin", "macos", "pkg"]
categories = ["command-line-utilities"]

[[bin]]
name = "iamawrapper"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# ZIP handling
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Cryptography (RustCrypto)
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"

# Encoding
base64 = "0.21"

# XML generation
quick-xml = "0.31"

# Progress and interactive
indicatif = "0.17"
dialoguer = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# File walking
walkdir = "2.4"

# macOS packaging
flate2 = { version = "1.0", optional = true }

# SHA1 for XAR checksums
sha1 = { version = "0.10", optional = true }

# Hex encoding
hex = { version = "0.4", optional = true }

[features]
default = ["intune", "macos"]
intune = []
macos = ["flate2", "sha1", "hex"]

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
